feat: configure production Supabase URL and exclude project config from package
- Add .envsync.json to .vscodeignore to exclude from extension package
- Update default API URL to production Supabase instance in package.json configuration
- Update fallback API URL in extension.ts and historyProvider.ts to production Supabase instance

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "properties": {
         "envsync.apiUrl": {
           "type": "string",
-          "default": "",
+          "default": "https://bryhohgvcdntkgakggzb.supabase.co/functions/v1",
           "description": "API URL for EnvSync backend (Supabase Functions URL)"
         },
         "envsync.autoSync": {
