--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,23 +13,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '18'
-          cache: 'npm'
+          bun-version: latest
           
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
         
       - name: TypeScript check
-        run: npx tsc --noEmit
+        run: bun run tsc --noEmit
         
       - name: Build extension
-        run: npm run build
+        run: bun run build
         
       - name: Package extension
-        run: npm run package
+        run: bun run package
         
       - name: Upload VSIX artifact
         uses: actions/upload-artifact@v4
