--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,24 +23,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '18'
-          cache: 'npm'
+          bun-version: latest
           
       - name: Get version
         id: version
-        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+        run: echo "version=$(bun -e "console.log(require('./package.json').version)")" >> $GITHUB_OUTPUT
           
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
         
       - name: Build extension
-        run: npm run build
+        run: bun run build
         
       - name: Package extension
-        run: npm run package
+        run: bun run package
         
       - name: Upload VSIX artifact
         uses: actions/upload-artifact@v4
@@ -78,14 +77,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '18'
-          cache: 'npm'
+          bun-version: latest
           
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
           
       - name: Download VSIX
         uses: actions/download-artifact@v4
@@ -93,4 +91,4 @@ jobs:
           name: envsync-${{ needs.build.outputs.version }}
           
       - name: Publish to VS Code Marketplace
-        run: npx vsce publish -p ${{ secrets.VSCE_PAT }}
+        run: bunx vsce publish -p ${{ secrets.VSCE_PAT }}
