--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "compile": "tsc --noEmit && npm run build",
+    "compile": "tsc --noEmit && bun run build",
     "lint": "echo 'No linter configured'",
     "test": "echo 'No tests configured'",
     "package": "vsce package",
