chore: remove frozen lockfile flag and ignore lock files in version control
- Remove --frozen-lockfile flag from bun install commands in build and release workflows to allow lock file regeneration
- Add bun.lockb and package-lock.json to .gitignore since bun regenerates lockfile on install
- Add supabase/.temp/ to .gitignore for temporary Supabase CLI files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         run: echo "version=$(bun -e "console.log(require('./package.json').version)")" >> $GITHUB_OUTPUT
           
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install
         
       - name: Build extension
         run: bun run build
@@ -93,7 +93,7 @@ jobs:
           bun-version: latest
           
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install
           
       - name: Download VSIX
         uses: actions/download-artifact@v4
