--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -57,7 +57,17 @@
           "default": [
             ".env",
             ".env.local",
-            ".env.development"
+            ".env.development",
+            ".envrc",
+            "application.properties",
+            "application.yml",
+            "application.yaml",
+            "application-*.properties",
+            "application-*.yml",
+            "application-*.yaml",
+            "appsettings.json",
+            "appsettings.*.json",
+            "config/*.exs"
           ],
           "description": "Patterns of environment files to sync"
         }
