--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Package extension
         run: bun run package
 
+      - name: Run tests
+        run: bun run test
+
   build-intellij:
     name: Build IntelliJ Plugin
     runs-on: ubuntu-latest
@@ -53,6 +56,9 @@ jobs:
 
       - name: Build plugin
         run: ./gradlew buildPlugin
+
+      - name: Run plugin tests
+        run: ./gradlew test
 
       - name: Upload plugin artifact
         uses: actions/upload-artifact@v4
