--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -109,10 +109,13 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^16.11.7",
     "@types/vscode": "^1.60.0",
     "@vscode/vsce": "^2.22.0",
+    "jest": "^29.7.0",
     "ovsx": "^0.8.0",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.4",
     "typescript": "^4.5.4",
     "webpack": "^5.76.0",
@@ -123,7 +126,7 @@
     "watch": "webpack --mode development --watch",
     "compile": "tsc --noEmit && bun run build",
     "lint": "echo 'No linter configured'",
-    "test": "echo 'No tests configured'",
+    "test": "jest --coverage",
     "package": "vsce package",
     "publish": "vsce publish",
     "supabase:start": "cd supabase && supabase start",
