--- a/packages/intellij-plugin/src/main/resources/META-INF/plugin.xml
+++ b/packages/intellij-plugin/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,7 @@
 <idea-plugin>
     <id>com.envsync.intellij</id>
     <name>EnvSync</name>
+    <version>0.2.1</version>
     <vendor email="support@envsync.dev" url="https://github.com/your-org/env-sync">EnvSync</vendor>
     <description><![CDATA[
         <p>Sync your <code>.env</code> files across projects via secure cloud storage.</p>
@@ -14,6 +15,14 @@
         <p>Works with all JetBrains IDEs.</p>
     ]]></description>
     <change-notes><![CDATA[
+        <h3>0.2.1</h3>
+        <ul>
+            <li>Release 0.2.1</li>
+        </ul>
+        <h3>0.0.2</h3>
+        <ul>
+            <li>Release 0.0.2</li>
+        </ul>
         <h3>0.1.0</h3>
         <ul>
             <li>Initial release</li>
